--- a/CHEETOS/Cube.html
+++ b/CHEETOS/Cube.html
@@ -633,9 +633,9 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
         transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
 }
 /*#/#*//*#i4.i14.text.css:text/base/css*/
-#i14 { position: absolute; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Trebuchet MS", Helvetica, sans-serif; font-size: 15px; color: #1d1d1d; font-weight: bold; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(255,255,255,0); margin-top: -5px;}
+#i14 { position: absolute; opacity: 1; background-color: rgba(255,255,255,0); font-family: Arial, Helvetica, sans-serif; font-size: 15px; color: #1d1d1d; font-weight: bold; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(255,255,255,0); margin-top: -5px;}
 /*#/#*//*#i14.i15.positioning.css:positioning/base/css.1*/
-#i14 { position: absolute; top: 50%; left: 50%; overflow: hidden; width: 285px; height: 35px;
+#i14 { position: absolute; top: 50%; left: 50%; overflow: hidden; width: 256px; height: 35px;
         -ms-transform: translate(-50%, -50%) translate(1px, 82px) rotate(0deg);
         -webkit-transform: translate(-50%, -50%) translate(1px, 82px) rotate(0deg);
         -moz-transform: translate(-50%, -50%) translate(1px, 82px) rotate(0deg);
@@ -653,20 +653,20 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 /*#/#*//*#i4.i286.image.css:image/base/css*/
 #i286 { opacity: 1; }
 /*#/#*//*#i286.i287.positioning.css:positioning/base/css.2*/
-#i286 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 169px; height: 45px;
-        -ms-transform: translate(0, 0) translate(65px, 139px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(65px, 139px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(65px, 139px) rotate(0deg);
-        transform: translate(0, 0) translate(65px, 139px) rotate(0deg);
+#i286 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 145px; height: 54px;
+        -ms-transform: translate(0, 0) translate(78px, 133px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(78px, 133px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(78px, 133px) rotate(0deg);
+        transform: translate(0, 0) translate(78px, 133px) rotate(0deg);
 }
 /*#/#*//*#i4.i181.image.css:image/base/css*/
 #i181 { opacity: 1; }
 /*#/#*//*#i181.i182.positioning.css:positioning/base/css.2*/
-#i181 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 62px; height: 36px;
-        -ms-transform: translate(0, 0) translate(236px, 212px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(236px, 212px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(236px, 212px) rotate(0deg);
-        transform: translate(0, 0) translate(236px, 212px) rotate(0deg);
+#i181 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 48px; height: 48px;
+        -ms-transform: translate(0, 0) translate(248px, 205px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(248px, 205px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(248px, 205px) rotate(0deg);
+        transform: translate(0, 0) translate(248px, 205px) rotate(0deg);
 }
 /*#/#*//*#i4.i91.shape.css:shape/base/css*/
 #i91 { background-color: #dedede; opacity: 0.00;
@@ -718,13 +718,13 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
         transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
 }
 /*#/#*//*#i5.i24.text.css:text/base/css*/
-#i24 { position: absolute; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Trebuchet MS", Helvetica, sans-serif; font-size: 15px; color: #1d1d1d; font-weight: bold; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(255,255,255,0); margin-top: -3px; margin-left: 5px;}
+#i24 { position: absolute; opacity: 1; background-color: rgba(255,255,255,0); font-family: Arial, Helvetica, sans-serif; font-size: 15px; color: #1d1d1d; font-weight: bold; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(255,255,255,0); margin-top: -3px; margin-left: 5px;}
 /*#/#*//*#i24.i25.positioning.css:positioning/base/css.1*/
-#i24 { position: absolute; top: 50%; left: 50%; overflow: hidden; width: 246px; height: 33px;
-        -ms-transform: translate(-50%, -50%) translate(0px, 77px) rotate(0deg);
-        -webkit-transform: translate(-50%, -50%) translate(0px, 77px) rotate(0deg);
-        -moz-transform: translate(-50%, -50%) translate(0px, 77px) rotate(0deg);
-        transform: translate(-50%, -50%) translate(0px, 77px) rotate(0deg);
+#i24 { position: absolute; top: 50%; left: 50%; overflow: hidden; width: 260px; height: 33px;
+        -ms-transform: translate(-50%, -50%) translate(-1px, 77px) rotate(0deg);
+        -webkit-transform: translate(-50%, -50%) translate(-1px, 77px) rotate(0deg);
+        -moz-transform: translate(-50%, -50%) translate(-1px, 77px) rotate(0deg);
+        transform: translate(-50%, -50%) translate(-1px, 77px) rotate(0deg);
 }
 /*#/#*//*#i5.i58.image.css:image/base/css*/
 #i58 { opacity: 1; }
@@ -735,23 +735,23 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
         -moz-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
         transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
 }
-/*#/#*//*#i5.i338.image.css:image/base/css*/
-#i338 { opacity: 1; }
-/*#/#*//*#i338.i339.positioning.css:positioning/base/css.2*/
-#i338 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 169px; height: 45px;
-        -ms-transform: translate(0, 0) translate(65px, 139px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(65px, 139px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(65px, 139px) rotate(0deg);
-        transform: translate(0, 0) translate(65px, 139px) rotate(0deg);
+/*#/#*//*#i5.i374.image.css:image/base/css*/
+#i374 { opacity: 1; }
+/*#/#*//*#i374.i375.positioning.css:positioning/base/css.2*/
+#i374 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 48px; height: 48px;
+        -ms-transform: translate(0, 0) translate(248px, 205px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(248px, 205px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(248px, 205px) rotate(0deg);
+        transform: translate(0, 0) translate(248px, 205px) rotate(0deg);
 }
-/*#/#*//*#i5.i340.image.css:image/base/css*/
-#i340 { opacity: 1; }
-/*#/#*//*#i340.i341.positioning.css:positioning/base/css.2*/
-#i340 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 62px; height: 36px;
-        -ms-transform: translate(0, 0) translate(236px, 212px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(236px, 212px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(236px, 212px) rotate(0deg);
-        transform: translate(0, 0) translate(236px, 212px) rotate(0deg);
+/*#/#*//*#i5.i370.image.css:image/base/css*/
+#i370 { opacity: 1; }
+/*#/#*//*#i370.i371.positioning.css:positioning/base/css.2*/
+#i370 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 145px; height: 54px;
+        -ms-transform: translate(0, 0) translate(78px, 133px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(78px, 133px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(78px, 133px) rotate(0deg);
+        transform: translate(0, 0) translate(78px, 133px) rotate(0deg);
 }
 /*#/#*//*#i5.i95.shape.css:shape/base/css*/
 #i95 { background-color: #dedede; opacity: 0.00;
@@ -803,13 +803,13 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
         transform: translate(0, 0) translate(0, 0) rotate(0deg);
 }
 /*#/#*//*#i6.i34.text.css:text/base/css*/
-#i34 { position: absolute; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Trebuchet MS", Helvetica, sans-serif; font-size: 15px; color: #1d1d1d; font-weight: bold; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(255,255,255,0); margin-top: -3px;}
+#i34 { position: absolute; opacity: 1; background-color: rgba(255,255,255,0); font-family: Arial, Helvetica, sans-serif; font-size: 15px; color: #1d1d1d; font-weight: bold; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(255,255,255,0); margin-top: -3px;}
 /*#/#*//*#i34.i35.positioning.css:positioning/base/css.1*/
 #i34 { position: absolute; top: 50%; left: 50%; overflow: hidden; width: 274px; height: 41px;
-        -ms-transform: translate(-50%, -50%) translate(0px, 80px) rotate(0deg);
-        -webkit-transform: translate(-50%, -50%) translate(0px, 80px) rotate(0deg);
-        -moz-transform: translate(-50%, -50%) translate(0px, 80px) rotate(0deg);
-        transform: translate(-50%, -50%) translate(0px, 80px) rotate(0deg);
+        -ms-transform: translate(-50%, -50%) translate(0px, 81px) rotate(0deg);
+        -webkit-transform: translate(-50%, -50%) translate(0px, 81px) rotate(0deg);
+        -moz-transform: translate(-50%, -50%) translate(0px, 81px) rotate(0deg);
+        transform: translate(-50%, -50%) translate(0px, 81px) rotate(0deg);
 }
 /*#/#*//*#i6.i60.image.css:image/base/css*/
 #i60 { opacity: 1; }
@@ -820,23 +820,23 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
         -moz-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
         transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
 }
-/*#/#*//*#i6.i354.image.css:image/base/css*/
-#i354 { opacity: 1; }
-/*#/#*//*#i354.i355.positioning.css:positioning/base/css.2*/
-#i354 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 169px; height: 45px;
-        -ms-transform: translate(0, 0) translate(65px, 139px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(65px, 139px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(65px, 139px) rotate(0deg);
-        transform: translate(0, 0) translate(65px, 139px) rotate(0deg);
+/*#/#*//*#i6.i372.image.css:image/base/css*/
+#i372 { opacity: 1; }
+/*#/#*//*#i372.i373.positioning.css:positioning/base/css.2*/
+#i372 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 145px; height: 54px;
+        -ms-transform: translate(0, 0) translate(78px, 133px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(78px, 133px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(78px, 133px) rotate(0deg);
+        transform: translate(0, 0) translate(78px, 133px) rotate(0deg);
 }
-/*#/#*//*#i6.i356.image.css:image/base/css*/
-#i356 { opacity: 1; }
-/*#/#*//*#i356.i357.positioning.css:positioning/base/css.2*/
-#i356 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 62px; height: 36px;
-        -ms-transform: translate(0, 0) translate(236px, 212px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(236px, 212px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(236px, 212px) rotate(0deg);
-        transform: translate(0, 0) translate(236px, 212px) rotate(0deg);
+/*#/#*//*#i6.i376.image.css:image/base/css*/
+#i376 { opacity: 1; }
+/*#/#*//*#i376.i377.positioning.css:positioning/base/css.2*/
+#i376 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 48px; height: 48px;
+        -ms-transform: translate(0, 0) translate(248px, 205px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(248px, 205px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(248px, 205px) rotate(0deg);
+        transform: translate(0, 0) translate(248px, 205px) rotate(0deg);
 }
 /*#/#*//*#i6.i99.shape.css:shape/base/css*/
 #i99 { background-color: #dedede; opacity: 0.00;
@@ -900,9 +900,9 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <!--#/#--><!--#i4.i130.image.html:image/html-->
 <img id="i130" src="https://i.imgur.com/ZPLewah.jpg"/>
 <!--#/#--><!--#i4.i286.image.html:image/html-->
-<img id="i286" src="https://i.imgur.com/bjdSPZp.png"/>
+<img id="i286" src="https://i.imgur.com/Xel91bX.png"/>
 <!--#/#--><!--#i4.i181.image.html:image/html-->
-<img id="i181" src="https://i.imgur.com/O7TzbZI.png"/>
+<img id="i181" src="https://i.imgur.com/i5scElM.png"/>
 <!--#/#--><!--#i4.i91.shape.html:shape/html-->
 <div id="i91"></div>
 <!--#/#--><!--#i4.i190.image.html:image/html-->
@@ -921,10 +921,10 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <div id="i24">SUBE: Tus creaciones monstruosas a Cheetos.com.mx</div>
 <!--#/#--><!--#i5.i58.image.html:image/html-->
 <img id="i58" src="https://i.imgur.com/xtjnVGT.gif"/>
-<!--#/#--><!--#i5.i338.image.html:image/html-->
-<img id="i338" src="https://i.imgur.com/bjdSPZp.png"/>
-<!--#/#--><!--#i5.i340.image.html:image/html-->
-<img id="i340" src="https://i.imgur.com/O7TzbZI.png"/>
+<!--#/#--><!--#i5.i374.image.html:image/html-->
+<img id="i374" src="https://i.imgur.com/i5scElM.png"/>
+<!--#/#--><!--#i5.i370.image.html:image/html-->
+<img id="i370" src="https://i.imgur.com/Xel91bX.png"/>
 <!--#/#--><!--#i5.i95.shape.html:shape/html-->
 <div id="i95"></div>
 <!--#/#--><!--#i5.i342.image.html:image/html-->
@@ -940,13 +940,13 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
     <!--#i6.i40.shape.html:shape/html-->
 <div id="i40"></div>
 <!--#/#--><!--#i6.i34.text.html:text/html-->
-<div id="i34">GANA: Increíbles premios semanalmente acumulando puntos.</div>
+<div id="i34">GANA: Increíbles premios semanalmente.</div>
 <!--#/#--><!--#i6.i60.image.html:image/html-->
-<img id="i60" src="https://i.imgur.com/5E3rb4G.jpg.jpg"/>
-<!--#/#--><!--#i6.i354.image.html:image/html-->
-<img id="i354" src="https://i.imgur.com/bjdSPZp.png"/>
-<!--#/#--><!--#i6.i356.image.html:image/html-->
-<img id="i356" src="https://i.imgur.com/O7TzbZI.png"/>
+<img id="i60" src="https://i.imgur.com/5E3rb4G.jpg"/>
+<!--#/#--><!--#i6.i372.image.html:image/html-->
+<img id="i372" src="https://i.imgur.com/Xel91bX.png"/>
+<!--#/#--><!--#i6.i376.image.html:image/html-->
+<img id="i376" src="https://i.imgur.com/i5scElM.png"/>
 <!--#/#--><!--#i6.i99.shape.html:shape/html-->
 <div id="i99"></div>
 <!--#/#--><!--#i6.i358.image.html:image/html-->
@@ -1075,14 +1075,14 @@ if ('click' === 'click') {
 
 /*#/#*//*#i5.i58.image.js:image/base/js*/
 
-/*#/#*//*#i5.i338.image.js:image/base/js*/
+/*#/#*//*#i5.i374.image.js:image/base/js*/
 
-/*#/#*//*#i338.i339.positioning.js:positioning/base/js.2*/
-bmShow('i338');
-/*#/#*//*#i5.i340.image.js:image/base/js*/
+/*#/#*//*#i374.i375.positioning.js:positioning/base/js.2*/
+bmShow('i374');
+/*#/#*//*#i5.i370.image.js:image/base/js*/
 
-/*#/#*//*#i340.i341.positioning.js:positioning/base/js.2*/
-bmShow('i340');
+/*#/#*//*#i370.i371.positioning.js:positioning/base/js.2*/
+bmShow('i370');
 /*#/#*//*#i95.i312.actions.js:actions/base/js.1*/
 /* Name: On Click; */
 var el = document.getElementById('i95');
@@ -1154,14 +1154,14 @@ if ('click' === 'click') {
   
 /*#/#*//*#i6.i60.image.js:image/base/js*/
 
-/*#/#*//*#i6.i354.image.js:image/base/js*/
+/*#/#*//*#i6.i372.image.js:image/base/js*/
 
-/*#/#*//*#i354.i355.positioning.js:positioning/base/js.2*/
-bmShow('i354');
-/*#/#*//*#i6.i356.image.js:image/base/js*/
+/*#/#*//*#i372.i373.positioning.js:positioning/base/js.2*/
+bmShow('i372');
+/*#/#*//*#i6.i376.image.js:image/base/js*/
 
-/*#/#*//*#i356.i357.positioning.js:positioning/base/js.2*/
-bmShow('i356');
+/*#/#*//*#i376.i377.positioning.js:positioning/base/js.2*/
+bmShow('i376');
 /*#/#*//*#i99.i336.actions.js:actions/base/js.1*/
 /* Name: On Click; */
 var el = document.getElementById('i99');
@@ -1311,15 +1311,15 @@ name: Imagen de Cuadro; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
 customName: 1;
 /*#/#*//*#i58.i59.positioning.meta:positioning/meta.1*/
 data: /*!*/{"keepAspectRatio":true}/*!*/;
-/*#/#*//*#i5.i338.image.meta:image/meta*/
-name: BOTON; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
-customName: 1;
-/*#/#*//*#i338.i339.positioning.meta:positioning/meta.2*/
-data: /*!*/{"keepAspectRatio":true}/*!*/;
-/*#/#*//*#i5.i340.image.meta:image/meta*/
+/*#/#*//*#i5.i374.image.meta:image/meta*/
 name: LOGO; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
 customName: 1;
-/*#/#*//*#i340.i341.positioning.meta:positioning/meta.2*/
+/*#/#*//*#i374.i375.positioning.meta:positioning/meta.2*/
+data: /*!*/{"keepAspectRatio":true}/*!*/;
+/*#/#*//*#i5.i370.image.meta:image/meta*/
+name: BOTON; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
+customName: 1;
+/*#/#*//*#i370.i371.positioning.meta:positioning/meta.2*/
 data: /*!*/{"keepAspectRatio":true}/*!*/;
 /*#/#*//*#i5.i95.shape.meta:shape/meta*/
 name: Link;
@@ -1355,15 +1355,15 @@ name: Imagen de Cuadro; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
 customName: 1;
 /*#/#*//*#i60.i61.positioning.meta:positioning/meta.1*/
 data: /*!*/{"keepAspectRatio":true}/*!*/;
-/*#/#*//*#i6.i354.image.meta:image/meta*/
+/*#/#*//*#i6.i372.image.meta:image/meta*/
 name: BOTON; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
 customName: 1;
-/*#/#*//*#i354.i355.positioning.meta:positioning/meta.2*/
+/*#/#*//*#i372.i373.positioning.meta:positioning/meta.2*/
 data: /*!*/{"keepAspectRatio":true}/*!*/;
-/*#/#*//*#i6.i356.image.meta:image/meta*/
+/*#/#*//*#i6.i376.image.meta:image/meta*/
 name: LOGO; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
 customName: 1;
-/*#/#*//*#i356.i357.positioning.meta:positioning/meta.2*/
+/*#/#*//*#i376.i377.positioning.meta:positioning/meta.2*/
 data: /*!*/{"keepAspectRatio":true}/*!*/;
 /*#/#*//*#i6.i99.shape.meta:shape/meta*/
 name: Link;
