--- a/CHEETOS/Fade.html
+++ b/CHEETOS/Fade.html
@@ -66,18 +66,18 @@
         }
 
         .bg.cover-1 {
-            background: url("https://i.imgur.com/5Y6A0jP.gif");
+            background: url("https://i.imgur.com/WpWGxKR.gif");
             background-size: cover;
         }
 
         .bg.cover-2 {
-            background: url("https://i.imgur.com/ixPOmRV.gif");
+            background: url("https://i.imgur.com/FMwM3q2.gif");
             background-size: cover;
             
         }
 
         .bg.cover-3 {
-            background: url("https://i.imgur.com/k7V9soI.gif");
+            background: url("https://i.imgur.com/iLysexB.gif");
             background-size: cover;
 
         }
