--- a/CHEETOS/Venetian.html
+++ b/CHEETOS/Venetian.html
@@ -2152,11 +2152,11 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 /*#/#*//*#i16.image.css:image/base/css*/
 #i16 { opacity: 1; }
 /*#/#*//*#i16.i17.positioning.css:positioning/base/css.2*/
-#i16 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 82px; height: 47px;
-        -ms-transform: translate(0, 0) translate(236px, 432px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(236px, 432px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(236px, 432px) rotate(0deg);
-        transform: translate(0, 0) translate(236px, 432px) rotate(0deg);
+#i16 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 66px; height: 66px;
+        -ms-transform: translate(0, 0) translate(250px, 417px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(250px, 417px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(250px, 417px) rotate(0deg);
+        transform: translate(0, 0) translate(250px, 417px) rotate(0deg);
 }
 /*#/#*//*#slice.css:slice/globalcss*/
 
@@ -2219,32 +2219,32 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 /*#/#*//*#i46.image.css:image/base/css*/
 #i46 { opacity: 1; }
 /*#/#*//*#i46.i47.positioning.css:positioning/base/css.2*/
-#i46 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 197px; height: 53px;
-        -ms-transform: translate(0, 0) translate(59px, 217px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(59px, 217px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(59px, 217px) rotate(0deg);
-        transform: translate(0, 0) translate(59px, 217px) rotate(0deg);
+#i46 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 165px; height: 61px;
+        -ms-transform: translate(0, 0) translate(75px, 214px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(75px, 214px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(75px, 214px) rotate(0deg);
+        transform: translate(0, 0) translate(75px, 214px) rotate(0deg);
 }
 /*#/#*//*#i111.text.css:text/base/css*/
-#i111 { position: absolute; white-space: pre-wrap; -webkit-font-smoothing: antialiased; -moz-osx-font-smoothing: grayscale; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Trebuchet MS", Helvetica, sans-serif; font-size: 14px; color: #000000; font-weight: bold; font-style: normal; text-decoration: none; text-align: left; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); }
+#i111 { position: absolute; white-space: pre-wrap; -webkit-font-smoothing: antialiased; -moz-osx-font-smoothing: grayscale; opacity: 1; background-color: rgba(255,255,255,0); font-family: Arial, Helvetica, sans-serif; font-size: 14px; color: #000000; font-weight: bold; font-style: normal; text-decoration: none; text-align: left; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); }
 /*#/#*//*#i111.i112.positioning.css:positioning/base/css.2*/
 #i111 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 261px; height: 150px;
-        -ms-transform: translate(0, 0) translate(46px, 396px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(46px, 396px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(46px, 396px) rotate(0deg);
-        transform: translate(0, 0) translate(46px, 396px) rotate(0deg);
+        -ms-transform: translate(0, 0) translate(46px, 393px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(46px, 393px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(46px, 393px) rotate(0deg);
+        transform: translate(0, 0) translate(46px, 393px) rotate(0deg);
 }
 /*#/#*//*#i117.text.css:text/base/css*/
-#i117 { position: absolute; white-space: pre-wrap; -webkit-font-smoothing: antialiased; -moz-osx-font-smoothing: grayscale; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Trebuchet MS", Helvetica, sans-serif; font-size: 14px; color: #000000; font-weight: bold; font-style: normal; text-decoration: none; text-align: left; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); }
+#i117 { position: absolute; white-space: pre-wrap; -webkit-font-smoothing: antialiased; -moz-osx-font-smoothing: grayscale; opacity: 1; background-color: rgba(255,255,255,0); font-family: Arial, Helvetica, sans-serif; font-size: 14px; color: #000000; font-weight: bold; font-style: normal; text-decoration: none; text-align: left; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); }
 /*#/#*//*#i117.i118.positioning.css:positioning/base/css.2*/
 #i117 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 246px; height: 150px;
-        -ms-transform: translate(0, 0) translate(28px, 397px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(28px, 397px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(28px, 397px) rotate(0deg);
-        transform: translate(0, 0) translate(28px, 397px) rotate(0deg);
+        -ms-transform: translate(0, 0) translate(28px, 394px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(28px, 394px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(28px, 394px) rotate(0deg);
+        transform: translate(0, 0) translate(28px, 394px) rotate(0deg);
 }
 /*#/#*//*#i109.text.css:text/base/css*/
-#i109 { position: absolute; white-space: pre-wrap; -webkit-font-smoothing: antialiased; -moz-osx-font-smoothing: grayscale; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Trebuchet MS", Helvetica, sans-serif; font-size: 14px; color: #000000; font-weight: bold; font-style: normal; text-decoration: none; text-align: left; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); }
+#i109 { position: absolute; white-space: pre-wrap; -webkit-font-smoothing: antialiased; -moz-osx-font-smoothing: grayscale; opacity: 1; background-color: rgba(255,255,255,0); font-family: Arial, Helvetica, sans-serif; font-size: 14px; color: #000000; font-weight: bold; font-style: normal; text-decoration: none; text-align: left; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); }
 /*#/#*//*#i109.i110.positioning.css:positioning/base/css.2*/
 #i109 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 221px; height: 150px;
         -ms-transform: translate(0, 0) translate(47px, 356px) rotate(0deg);
@@ -2253,7 +2253,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
         transform: translate(0, 0) translate(47px, 356px) rotate(0deg);
 }
 /*#/#*//*#i115.text.css:text/base/css*/
-#i115 { position: absolute; white-space: pre-wrap; -webkit-font-smoothing: antialiased; -moz-osx-font-smoothing: grayscale; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Trebuchet MS", Helvetica, sans-serif; font-size: 14px; color: #000000; font-weight: bold; font-style: normal; text-decoration: none; text-align: left; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); }
+#i115 { position: absolute; white-space: pre-wrap; -webkit-font-smoothing: antialiased; -moz-osx-font-smoothing: grayscale; opacity: 1; background-color: rgba(255,255,255,0); font-family: Arial, Helvetica, sans-serif; font-size: 14px; color: #000000; font-weight: bold; font-style: normal; text-decoration: none; text-align: left; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); }
 /*#/#*//*#i115.i116.positioning.css:positioning/base/css.2*/
 #i115 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 246px; height: 150px;
         -ms-transform: translate(0, 0) translate(29px, 356px) rotate(0deg);
@@ -2262,31 +2262,31 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
         transform: translate(0, 0) translate(29px, 356px) rotate(0deg);
 }
 /*#/#*//*#i68.text.css:text/base/css*/
-#i68 { position: absolute; white-space: pre-wrap; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Trebuchet MS", Helvetica, sans-serif; font-size: 14px; color: #000000; font-weight: bold; font-style: normal; text-decoration: none; text-align: left; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); }
+#i68 { position: absolute; white-space: pre-wrap; opacity: 1; background-color: rgba(255,255,255,0); font-family: Arial, Helvetica, sans-serif; font-size: 14px; color: #000000; font-weight: bold; font-style: normal; text-decoration: none; text-align: left; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); }
 /*#/#*//*#i68.i69.positioning.css:positioning/base/css.2*/
 #i68 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 229px; height: 150px;
-        -ms-transform: translate(0, 0) translate(48px, 315px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(48px, 315px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(48px, 315px) rotate(0deg);
-        transform: translate(0, 0) translate(48px, 315px) rotate(0deg);
+        -ms-transform: translate(0, 0) translate(48px, 319px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(48px, 319px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(48px, 319px) rotate(0deg);
+        transform: translate(0, 0) translate(48px, 319px) rotate(0deg);
 }
 /*#/#*//*#i113.text.css:text/base/css*/
-#i113 { position: absolute; white-space: pre-wrap; -webkit-font-smoothing: antialiased; -moz-osx-font-smoothing: grayscale; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Trebuchet MS", Helvetica, sans-serif; font-size: 14px; color: #000000; font-weight: bold; font-style: normal; text-decoration: none; text-align: left; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); }
+#i113 { position: absolute; white-space: pre-wrap; -webkit-font-smoothing: antialiased; -moz-osx-font-smoothing: grayscale; opacity: 1; background-color: rgba(255,255,255,0); font-family: Arial, Helvetica, sans-serif; font-size: 14px; color: #000000; font-weight: bold; font-style: normal; text-decoration: none; text-align: left; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); }
 /*#/#*//*#i113.i114.positioning.css:positioning/base/css.2*/
 #i113 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 246px; height: 150px;
-        -ms-transform: translate(0, 0) translate(30px, 315px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(30px, 315px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(30px, 315px) rotate(0deg);
-        transform: translate(0, 0) translate(30px, 315px) rotate(0deg);
+        -ms-transform: translate(0, 0) translate(30px, 319px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(30px, 319px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(30px, 319px) rotate(0deg);
+        transform: translate(0, 0) translate(30px, 319px) rotate(0deg);
 }
 /*#/#*//*#i63.text.css:text/base/css*/
-#i63 { position: absolute; white-space: pre-wrap; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Trebuchet MS", Helvetica, sans-serif; font-size: 16px; color: #000000; font-weight: bold; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); }
+#i63 { position: absolute; white-space: pre-wrap; opacity: 1; background-color: rgba(255,255,255,0); font-family: AmsiProCond-Ultra; font-size: 19px; color: #000000; font-weight: normal; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); }
 /*#/#*//*#i63.i64.positioning.css:positioning/base/css.2*/
 #i63 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 261px; height: 47px;
-        -ms-transform: translate(0, 0) translate(31px, 274px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(31px, 274px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(31px, 274px) rotate(0deg);
-        transform: translate(0, 0) translate(31px, 274px) rotate(0deg);
+        -ms-transform: translate(0, 0) translate(31px, 270px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(31px, 270px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(31px, 270px) rotate(0deg);
+        transform: translate(0, 0) translate(31px, 270px) rotate(0deg);
 }
 /*#/#*//*#i91.image.css:image/base/css*/
 #i91 { opacity: 1; }
@@ -2334,6 +2334,18 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
         -moz-transform: translate(0, 0) translate(66px, 447px) rotate(0deg);
         transform: translate(0, 0) translate(66px, 447px) rotate(0deg);
 }
+/*#/#*//*#i119.font-local.css:font/font-local/css*/
+/*#i119.i120.font-local.css:font-local/css.1*/
+@font-face {
+font-family: 'AmsiProCond-Ultra';
+src: url('fonts/');
+src: url('fonts/?#iefix') format('embedded-opentype'),
+url('fonts/AmsiProCond-Ultra.woff') format('woff'),
+url('fonts/') format('truetype'),
+url('fonts/') format('opentype'),
+url('fonts/') format('svg');
+}
+/*#/#*/
 /*#/#*/
 </style>
 <!--#/#--></head>
@@ -2348,12 +2360,16 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <dataimg id="i5" src="https://i.imgur.com/rnXea27.gif"></dataimg>
 <!--#/#--><!--#i2.i6.slice-image.html:slice-image/html-->
 <dataimg id="i6" src="https://i.imgur.com/OdTF8RH.gif"></dataimg>
+<!--#/#--><!--#i2.i121.slice-image.html:slice-image/html.1-->
+<dataimg id="i121" src="https://i.imgur.com/TTzgxhA.jpg"></dataimg>
+<!--#/#--><!--#i2.i122.slice-image.html:slice-image/html.1-->
+<dataimg id="i122" src="https://i.imgur.com/UofjmhA.gif"></dataimg>
 <!--#/#-->
 </div>
 <!--#/#--><!--#i16.image.html:image/html-->
-<img id="i16" src="https://i.imgur.com/O7TzbZI.png"/>
+<img id="i16" src="https://i.imgur.com/i5scElM.png"/>
 <!--#/#--><!--#i46.image.html:image/html-->
-<img id="i46" src="https://i.imgur.com/bjdSPZp.png"/>
+<img id="i46" src="https://i.imgur.com/cjJDJNx.png"/>
 <!--#/#--><!--#i111.text.html:text/html-->
 <div id="i111">GANA: Increíbles premios semanalmente acumulando puntos.</div>
 <!--#/#--><!--#i117.text.html:text/html-->
@@ -2378,6 +2394,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <img id="i95" src="https://i.imgur.com/7GFWw3J.png"/>
 <!--#/#--><!--#i97.image.html:image/html-->
 <img id="i97" src="https://i.imgur.com/TaLq8Gr.png"/>
+<!--#/#--><!--#i119.font.html:font/html-->
 <!--#/#--><!--#/#--><!--#js:common/js-->
 <script>
 /*#i30.i31.positioning.js:positioning/base/js.2*/
@@ -2426,6 +2443,10 @@ document.addEventListener('DOMContentLoaded', function() {
 
 /*#/#*//*#i2.i6.slice-image.js:slice-image/base/js*/
 
+/*#/#*//*#i2.i121.slice-image.js:slice-image/base/js.1*/
+
+/*#/#*//*#i2.i122.slice-image.js:slice-image/base/js.1*/
+
 /*#/#*//*#i16.image.js:image/base/js*/
 
 /*#/#*//*#i16.i17.positioning.js:positioning/base/js.2*/
@@ -2436,10 +2457,16 @@ bmShow('i16');
 bmShow('i46');
 /*#/#*//*#i111.i112.positioning.js:positioning/base/js.2*/
 bmShow('i111');
+/*#/#*//*#i117.i118.positioning.js:positioning/base/js.2*/
+bmShow('i117');
 /*#/#*//*#i109.i110.positioning.js:positioning/base/js.2*/
 bmShow('i109');
+/*#/#*//*#i115.i116.positioning.js:positioning/base/js.2*/
+bmShow('i115');
 /*#/#*//*#i68.i69.positioning.js:positioning/base/js.2*/
 bmShow('i68');
+/*#/#*//*#i113.i114.positioning.js:positioning/base/js.2*/
+bmShow('i113');
 /*#/#*//*#i63.i64.positioning.js:positioning/base/js.2*/
 bmShow('i63');
 /*#/#*//*#i91.image.js:image/base/js*/
@@ -2512,12 +2539,6 @@ el.addEventListener('click', function(e){
 if ('click' === 'click') {
     el.style.cursor = 'pointer';
 }
-/*#/#*//*#i113.i114.positioning.js:positioning/base/js.2*/
-bmShow('i113');
-/*#/#*//*#i115.i116.positioning.js:positioning/base/js.2*/
-bmShow('i115');
-/*#/#*//*#i117.i118.positioning.js:positioning/base/js.2*/
-bmShow('i117');
 /*#/#*//*#i9.visibility.js:visibility/js*/
 function bmShow(id) {
     var el = document.getElementById(id);
@@ -2544,6 +2565,12 @@ name: xtWWF5n.gif; fileId: ; sourceTypeId: externalUrl;
 name: rnXea27.gif; fileId: ; sourceTypeId: externalUrl;
 /*#/#*//*#i2.i6.slice-image.meta:slice-image/meta*/
 name: OdTF8RH.gif; fileId: ; sourceTypeId: externalUrl;
+/*#/#*//*#i2.i121.slice-image.meta:slice-image/meta.1*/
+name: TTzgxhA.jpg; fileId: ; sourceTypeId: externalUrl;
+customName: false;
+/*#/#*//*#i2.i122.slice-image.meta:slice-image/meta.1*/
+name: UofjmhA.gif; fileId: ; sourceTypeId: externalUrl;
+customName: false;
 /*#/#*//*#i2.i3.positioning.meta:positioning/meta.1*/
 data: /*!*/{}/*!*/;
 /*#/#*//*#i16.image.meta:image/meta*/
@@ -2608,4 +2635,6 @@ name: T; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
 customName: 1;
 /*#/#*//*#i97.i98.positioning.meta:positioning/meta.2*/
 data: /*!*/{"keepAspectRatio":true}/*!*/;
+/*#/#*//*#i119.font.meta:font/meta*/
+name: Web Font: AmsiProCond-Ultra; type: font-local; customName: ;
 /*#/#*/--><!--#/#-->
