--- a/Falabella8/Venetian300x600.html
+++ b/Falabella8/Venetian300x600.html
@@ -2143,13 +2143,13 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
         transform: translate(0, 0) translate(9px, 446px) rotate(0deg);
 }
 /*#/#*//*#i12.text.css:text/base/css*/
-#i12 { position: absolute; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Trebuchet MS", Helvetica, sans-serif; font-size: 16px; color: #000000; font-weight: normal; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); }
+#i12 { position: absolute; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Trebuchet MS", Helvetica, sans-serif; font-size: 14px; color: #000000; font-weight: normal; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); }
 /*#/#*//*#i12.i13.positioning.css:positioning/base/css.2*/
 #i12 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 269px; height: 73px;
-        -ms-transform: translate(0, 0) translate(16px, 506px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(16px, 506px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(16px, 506px) rotate(0deg);
-        transform: translate(0, 0) translate(16px, 506px) rotate(0deg);
+        -ms-transform: translate(0, 0) translate(16px, 496px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(16px, 496px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(16px, 496px) rotate(0deg);
+        transform: translate(0, 0) translate(16px, 496px) rotate(0deg);
 }
 /*#/#*//*#i2.slice.css:slice/base/css*/
 #i2.adf-SlicedUnit {
@@ -2288,9 +2288,9 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <!--#html:common/html--><!--#i1.core.html:core/html--><!--#/#--><!--#i30.shape.html:shape/html-->
 <div id="i30"></div>
 <!--#/#--><!--#i7.text.html:text/html-->
-<div id="i7">Haz realidad tu sueño con Viajes Falabella</div>
+<div id="i7">Viaja a Europa desde $2.969.000</div>
 <!--#/#--><!--#i12.text.html:text/html-->
-<div id="i12">¿Qué esperas para conocer Europa? ¡Visítanos y reserva!</div>
+<div id="i12">Haz realidad tu sueño con Viajes Falabella . ¿Qué esperas para conocer Europa? ¡Visítanos y reserva!</div>
 <!--#/#--><!--#i2.slice.html:slice/html-->
 <div id="i2" class="adf-SliceBox">
     <!--#i2.i4.slice-image.html:slice-image/html-->
@@ -2459,11 +2459,11 @@ name: Shape 1;
 /*#/#*//*#i30.i31.positioning.meta:positioning/meta.2*/
 data: /*!*/{}/*!*/;
 /*#/#*//*#i7.text.meta:text/meta*/
-name: Haz realidad tu sueño con Viajes Falabella; customName: false;
+name: Viaja a Europa desde $2.969.000; customName: false;
 /*#/#*//*#i7.i8.positioning.meta:positioning/meta.2*/
 data: /*!*/{}/*!*/;
 /*#/#*//*#i12.text.meta:text/meta*/
-name: ¿Qué esperas para conocer Europa? ¡Visítanos y reserva!; customName: false;
+name: Haz realidad tu sueño con Viajes Falabella . ¿Qué esperas para conocer Europa? ¡Visítanos y reserva!; customName: false;
 /*#/#*//*#i12.i13.positioning.meta:positioning/meta.2*/
 data: /*!*/{}/*!*/;
 /*#/#*//*#i2.slice.meta:slice/meta*/
