--- a/Falabella8/Cube.html
+++ b/Falabella8/Cube.html
@@ -665,15 +665,6 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
         -moz-transform: translate(0, 0) translate(253px, 220px) rotate(0deg);
         transform: translate(0, 0) translate(253px, 220px) rotate(0deg);
 }
-/*#/#*//*#i4.i458.text.css:text/base/css*/
-#i458 { position: absolute; white-space: pre-wrap; -webkit-font-smoothing: antialiased; -moz-osx-font-smoothing: grayscale; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Trebuchet MS", Helvetica, sans-serif; font-size: 14px; color: #000000; font-weight: normal; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); }
-/*#/#*//*#i458.i459.positioning.css:positioning/base/css.2*/
-#i458 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 231px; height: 36px;
-        -ms-transform: translate(0, 0) translate(35px, 193px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(35px, 193px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(35px, 193px) rotate(0deg);
-        transform: translate(0, 0) translate(35px, 193px) rotate(0deg);
-}
 /*#/#*//*#i4.i414.text.css:text/base/css*/
 #i414 { position: absolute; white-space: pre-wrap; -webkit-font-smoothing: antialiased; -moz-osx-font-smoothing: grayscale; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Trebuchet MS", Helvetica, sans-serif; font-size: 17px; color: #000000; font-weight: bold; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); }
 /*#/#*//*#i414.i415.positioning.css:positioning/base/css.2*/
@@ -720,6 +711,15 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
         -moz-transform: translate(0, 0) translate(54px, 224px) rotate(0deg);
         transform: translate(0, 0) translate(54px, 224px) rotate(0deg);
 }
+/*#/#*//*#i4.i522.text.css:text/base/css*/
+#i522 { position: absolute; white-space: pre-wrap; -webkit-font-smoothing: antialiased; -moz-osx-font-smoothing: grayscale; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Trebuchet MS", Helvetica, sans-serif; font-size: 12px; color: #000000; font-weight: normal; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); }
+/*#/#*//*#i522.i523.positioning.css:positioning/base/css.2*/
+#i522 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 237px; height: 36px;
+        -ms-transform: translate(0, 0) translate(32px, 193px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(32px, 193px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(32px, 193px) rotate(0deg);
+        transform: translate(0, 0) translate(32px, 193px) rotate(0deg);
+}
 /*#/#*//*#i50.i51.actions-clicktag.css:actions-clicktag/base/css.1*/
 #i4 { cursor: pointer; }
 /*#/#*//*#i5.i30.shape.css:shape/base/css*/
@@ -749,15 +749,6 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
         -webkit-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
         -moz-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
         transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
-}
-/*#/#*//*#i5.i504.text.css:text/base/css*/
-#i504 { position: absolute; white-space: pre-wrap; -webkit-font-smoothing: antialiased; -moz-osx-font-smoothing: grayscale; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Trebuchet MS", Helvetica, sans-serif; font-size: 14px; color: #000000; font-weight: normal; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); }
-/*#/#*//*#i504.i505.positioning.css:positioning/base/css.2*/
-#i504 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 231px; height: 36px;
-        -ms-transform: translate(0, 0) translate(35px, 193px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(35px, 193px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(35px, 193px) rotate(0deg);
-        transform: translate(0, 0) translate(35px, 193px) rotate(0deg);
 }
 /*#/#*//*#i5.i508.text.css:text/base/css*/
 #i508 { position: absolute; white-space: pre-wrap; -webkit-font-smoothing: antialiased; -moz-osx-font-smoothing: grayscale; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Trebuchet MS", Helvetica, sans-serif; font-size: 17px; color: #000000; font-weight: bold; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); }
@@ -814,6 +805,15 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
         -moz-transform: translate(0, 0) translate(54px, 224px) rotate(0deg);
         transform: translate(0, 0) translate(54px, 224px) rotate(0deg);
 }
+/*#/#*//*#i5.i520.text.css:text/base/css*/
+#i520 { position: absolute; white-space: pre-wrap; -webkit-font-smoothing: antialiased; -moz-osx-font-smoothing: grayscale; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Trebuchet MS", Helvetica, sans-serif; font-size: 12px; color: #000000; font-weight: normal; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); }
+/*#/#*//*#i520.i521.positioning.css:positioning/base/css.2*/
+#i520 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 237px; height: 36px;
+        -ms-transform: translate(0, 0) translate(32px, 193px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(32px, 193px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(32px, 193px) rotate(0deg);
+        transform: translate(0, 0) translate(32px, 193px) rotate(0deg);
+}
 /*#/#*//*#i52.i53.actions-clicktag.css:actions-clicktag/base/css.1*/
 #i5 { cursor: pointer; }
 /*#/#*//*#i6.i40.shape.css:shape/base/css*/
@@ -836,13 +836,13 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
         transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
 }
 /*#/#*//*#i6.i506.text.css:text/base/css*/
-#i506 { position: absolute; white-space: pre-wrap; -webkit-font-smoothing: antialiased; -moz-osx-font-smoothing: grayscale; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Trebuchet MS", Helvetica, sans-serif; font-size: 14px; color: #000000; font-weight: normal; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); }
+#i506 { position: absolute; white-space: pre-wrap; -webkit-font-smoothing: antialiased; -moz-osx-font-smoothing: grayscale; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Trebuchet MS", Helvetica, sans-serif; font-size: 12px; color: #000000; font-weight: normal; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); }
 /*#/#*//*#i506.i507.positioning.css:positioning/base/css.2*/
-#i506 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 231px; height: 36px;
-        -ms-transform: translate(0, 0) translate(35px, 193px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(35px, 193px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(35px, 193px) rotate(0deg);
-        transform: translate(0, 0) translate(35px, 193px) rotate(0deg);
+#i506 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 237px; height: 36px;
+        -ms-transform: translate(0, 0) translate(32px, 193px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(32px, 193px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(32px, 193px) rotate(0deg);
+        transform: translate(0, 0) translate(32px, 193px) rotate(0deg);
 }
 /*#/#*//*#i6.i510.text.css:text/base/css*/
 #i510 { position: absolute; white-space: pre-wrap; -webkit-font-smoothing: antialiased; -moz-osx-font-smoothing: grayscale; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Trebuchet MS", Helvetica, sans-serif; font-size: 17px; color: #000000; font-weight: bold; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); }
@@ -946,10 +946,8 @@ url('fonts/') format('svg');
 <img id="i480" src="https://i.imgur.com/jMtWVUi.png"/>
 <!--#/#--><!--#i4.i181.image.html:image/html-->
 <img id="i181" src="https://i.imgur.com/M6QtrYS.png"/>
-<!--#/#--><!--#i4.i458.text.html:text/html-->
-<div id="i458">¿Qué esperas para conocer Europa? ¡Visítanos y reserva!</div>
 <!--#/#--><!--#i4.i414.text.html:text/html-->
-<div id="i414">Haz realidad tu sueño con Viajes Falabella</div>
+<div id="i414">Viaja a Europa desde $2.969.000</div>
 <!--#/#--><!--#i4.i91.shape.html:shape/html-->
 <div id="i91"></div>
 <!--#/#--><!--#i4.i190.image.html:image/html-->
@@ -958,6 +956,8 @@ url('fonts/') format('svg');
 <img id="i228" src="https://i.imgur.com/RM74AKi.png"/>
 <!--#/#--><!--#i4.i242.image.html:image/html-->
 <img id="i242" src="https://i.imgur.com/3WrUEnv.png"/>
+<!--#/#--><!--#i4.i522.text.html:text/html-->
+<div id="i522">Haz realidad tu sueño con Viajes Falabella. ¿Qué esperas para conocer Europa? ¡Visítanos y reserva!</div>
 <!--#/#-->
 </div>
 <!--#/#--><!--#i2.i5.cube-panel.html:cube-panel/html-->
@@ -968,10 +968,8 @@ url('fonts/') format('svg');
 <img id="i428" src="https://i.imgur.com/M6QtrYS.png"/>
 <!--#/#--><!--#i5.i58.image.html:image/html-->
 <img id="i58" src="https://i.imgur.com/gbLRHLI.png"/>
-<!--#/#--><!--#i5.i504.text.html:text/html-->
-<div id="i504">¿Qué esperas para conocer Europa? ¡Visítanos y reserva!</div>
 <!--#/#--><!--#i5.i508.text.html:text/html-->
-<div id="i508">Haz realidad tu sueño con Viajes Falabella</div>
+<div id="i508">Viaja a Europa desde $2.969.000</div>
 <!--#/#--><!--#i5.i514.image.html:image/html-->
 <img id="i514" src="https://i.imgur.com/jMtWVUi.png"/>
 <!--#/#--><!--#i5.i434.shape.html:shape/html-->
@@ -982,6 +980,8 @@ url('fonts/') format('svg');
 <img id="i420" src="https://i.imgur.com/RM74AKi.png"/>
 <!--#/#--><!--#i5.i468.image.html:image/html-->
 <img id="i468" src="https://i.imgur.com/3WrUEnv.png"/>
+<!--#/#--><!--#i5.i520.text.html:text/html-->
+<div id="i520">Haz realidad tu sueño con Viajes Falabella. ¿Qué esperas para conocer Europa? ¡Visítanos y reserva!</div>
 <!--#/#-->
 </div>
 <!--#/#--><!--#i2.i6.cube-panel.html:cube-panel/html-->
@@ -991,9 +991,9 @@ url('fonts/') format('svg');
 <!--#/#--><!--#i6.i512.image.html:image/html-->
 <img id="i512" src="https://i.imgur.com/gbLRHLI.png"/>
 <!--#/#--><!--#i6.i506.text.html:text/html-->
-<div id="i506">¿Qué esperas para conocer Europa? ¡Visítanos y reserva!</div>
+<div id="i506">Haz realidad tu sueño con Viajes Falabella. ¿Qué esperas para conocer Europa? ¡Visítanos y reserva!</div>
 <!--#/#--><!--#i6.i510.text.html:text/html-->
-<div id="i510">Haz realidad tu sueño con Viajes Falabella</div>
+<div id="i510">Viaja a Europa desde $2.969.000</div>
 <!--#/#--><!--#i6.i516.image.html:image/html-->
 <img id="i516" src="https://i.imgur.com/jMtWVUi.png"/>
 <!--#/#--><!--#i6.i518.image.html:image/html-->
@@ -1056,8 +1056,6 @@ bmShow('i480');
 
 /*#/#*//*#i181.i182.positioning.js:positioning/base/js.2*/
 bmShow('i181');
-/*#/#*//*#i458.i459.positioning.js:positioning/base/js.2*/
-bmShow('i458');
 /*#/#*//*#i414.i415.positioning.js:positioning/base/js.2*/
 bmShow('i414');
 /*#/#*//*#i91.i486.actions.js:actions/base/js.1*/
@@ -1124,6 +1122,8 @@ el.addEventListener('click', function(e){
 if ('click' === 'click') {
     el.style.cursor = 'pointer';
 }
+/*#/#*//*#i522.i523.positioning.js:positioning/base/js.2*/
+bmShow('i522');
 /*#/#*//*#i4.i50.actions.js:actions/base/js*/
 /* Name: On Click; */
 
@@ -1135,8 +1135,6 @@ if ('click' === 'click') {
 bmShow('i428');
 /*#/#*//*#i5.i58.image.js:image/base/js*/
 
-/*#/#*//*#i504.i505.positioning.js:positioning/base/js.2*/
-bmShow('i504');
 /*#/#*//*#i508.i509.positioning.js:positioning/base/js.2*/
 bmShow('i508');
 /*#/#*//*#i5.i514.image.js:image/base/js*/
@@ -1207,6 +1205,8 @@ el.addEventListener('click', function(e){
 if ('click' === 'click') {
     el.style.cursor = 'pointer';
 }
+/*#/#*//*#i520.i521.positioning.js:positioning/base/js.2*/
+bmShow('i520');
 /*#/#*//*#i5.i52.actions.js:actions/base/js*/
 /* Name: On Click; */
 
@@ -1341,12 +1341,8 @@ name: LOGO; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
 customName: 1;
 /*#/#*//*#i181.i182.positioning.meta:positioning/meta.2*/
 data: /*!*/{"keepAspectRatio":true}/*!*/;
-/*#/#*//*#i4.i458.text.meta:text/meta*/
-name: ¿Qué esperas para conocer Europa? ¡Visítanos y reserva!; customName: false;
-/*#/#*//*#i458.i459.positioning.meta:positioning/meta.2*/
-data: /*!*/{}/*!*/;
 /*#/#*//*#i4.i414.text.meta:text/meta*/
-name: Haz realidad tu sueño con Viajes Falabella; customName: false;
+name: Viaja a Europa desde $2.969.000; customName: false;
 /*#/#*//*#i414.i415.positioning.meta:positioning/meta.2*/
 data: /*!*/{}/*!*/;
 /*#/#*//*#i4.i91.shape.meta:shape/meta*/
@@ -1368,6 +1364,10 @@ name: T; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
 customName: 1;
 /*#/#*//*#i242.i243.positioning.meta:positioning/meta.2*/
 data: /*!*/{"keepAspectRatio":true}/*!*/;
+/*#/#*//*#i4.i522.text.meta:text/meta*/
+name: Haz realidad tu sueño con Viajes Falabella. ¿Qué esperas para conocer Europa? ¡Visítanos y reserva!; customName: false;
+/*#/#*//*#i522.i523.positioning.meta:positioning/meta.2*/
+data: /*!*/{}/*!*/;
 /*#/#*//*#i2.i5.cube-panel.meta:cube-panel/meta*/
     name: Cube Panel 2;
 /*#/#*//*#i5.i30.shape.meta:shape/meta*/
@@ -1384,12 +1384,8 @@ name: Imagen de Cuadro; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
 customName: 1;
 /*#/#*//*#i58.i59.positioning.meta:positioning/meta.1*/
 data: /*!*/{"keepAspectRatio":true}/*!*/;
-/*#/#*//*#i5.i504.text.meta:text/meta*/
-name: ¿Qué esperas para conocer Europa? ¡Visítanos y reserva!; customName: false;
-/*#/#*//*#i504.i505.positioning.meta:positioning/meta.2*/
-data: /*!*/{}/*!*/;
 /*#/#*//*#i5.i508.text.meta:text/meta*/
-name: Haz realidad tu sueño con Viajes Falabella; customName: false;
+name: Viaja a Europa desde $2.969.000; customName: false;
 /*#/#*//*#i508.i509.positioning.meta:positioning/meta.2*/
 data: /*!*/{}/*!*/;
 /*#/#*//*#i5.i514.image.meta:image/meta*/
@@ -1416,6 +1412,10 @@ name: T copy; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
 customName: 1;
 /*#/#*//*#i468.i469.positioning.meta:positioning/meta.2*/
 data: /*!*/{"keepAspectRatio":true}/*!*/;
+/*#/#*//*#i5.i520.text.meta:text/meta*/
+name: Haz realidad tu sueño con Viajes Falabella. ¿Qué esperas para conocer Europa? ¡Visítanos y reserva!; customName: false;
+/*#/#*//*#i520.i521.positioning.meta:positioning/meta.2*/
+data: /*!*/{}/*!*/;
 /*#/#*//*#i2.i6.cube-panel.meta:cube-panel/meta*/
     name: Cube Panel 3;
 /*#/#*//*#i6.i40.shape.meta:shape/meta*/
@@ -1428,11 +1428,11 @@ customName: 1;
 /*#/#*//*#i512.i513.positioning.meta:positioning/meta.1*/
 data: /*!*/{"keepAspectRatio":true}/*!*/;
 /*#/#*//*#i6.i506.text.meta:text/meta*/
-name: ¿Qué esperas para conocer Europa? ¡Visítanos y reserva!; customName: false;
+name: Haz realidad tu sueño con Viajes Falabella. ¿Qué esperas para conocer Europa? ¡Visítanos y reserva!; customName: false;
 /*#/#*//*#i506.i507.positioning.meta:positioning/meta.2*/
 data: /*!*/{}/*!*/;
 /*#/#*//*#i6.i510.text.meta:text/meta*/
-name: Haz realidad tu sueño con Viajes Falabella; customName: false;
+name: Viaja a Europa desde $2.969.000; customName: false;
 /*#/#*//*#i510.i511.positioning.meta:positioning/meta.2*/
 data: /*!*/{}/*!*/;
 /*#/#*//*#i6.i516.image.meta:image/meta*/
