--- a/CHEETOS/Venetian.html
+++ b/CHEETOS/Venetian.html
@@ -2246,7 +2246,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 /*#/#*//*#i109.text.css:text/base/css*/
 #i109 { position: absolute; white-space: pre-wrap; -webkit-font-smoothing: antialiased; -moz-osx-font-smoothing: grayscale; opacity: 1; background-color: rgba(255,255,255,0); font-family: Arial, Helvetica, sans-serif; font-size: 14px; color: #000000; font-weight: bold; font-style: normal; text-decoration: none; text-align: left; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); }
 /*#/#*//*#i109.i110.positioning.css:positioning/base/css.2*/
-#i109 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 221px; height: 150px;
+#i109 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 245px; height: 150px;
         -ms-transform: translate(0, 0) translate(47px, 356px) rotate(0deg);
         -webkit-transform: translate(0, 0) translate(47px, 356px) rotate(0deg);
         -moz-transform: translate(0, 0) translate(47px, 356px) rotate(0deg);
@@ -2371,7 +2371,7 @@ url('fonts/') format('svg');
 <!--#/#--><!--#i46.image.html:image/html-->
 <img id="i46" src="https://i.imgur.com/cjJDJNx.png"/>
 <!--#/#--><!--#i111.text.html:text/html-->
-<div id="i111">GANA: Increíbles premios semanalmente acumulando puntos.</div>
+<div id="i111">GANA: Increíbles premios semanalmente.</div>
 <!--#/#--><!--#i117.text.html:text/html-->
 <div id="i117">3.</div>
 <!--#/#--><!--#i109.text.html:text/html-->
@@ -2515,7 +2515,7 @@ var el = document.getElementById('i95');
 
 el.addEventListener('click', function(e){
     /*#i105.i106.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG3')) : window.open(dhtml.getVar('clickTAG3', 'whatsapp://send?text=https://www.cheetos.com.mx'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG3')) : window.open(dhtml.getVar('clickTAG3', 'https://web.whatsapp.com/'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
@@ -2584,7 +2584,7 @@ customName: 1;
 /*#/#*//*#i46.i47.positioning.meta:positioning/meta.2*/
 data: /*!*/{"keepAspectRatio":true}/*!*/;
 /*#/#*//*#i111.text.meta:text/meta*/
-name: GANA: Increíbles premios semanalmente acumulando puntos.; customName: false;
+name: GANA: Increíbles premios semanalmente.; customName: false;
 /*#/#*//*#i111.i112.positioning.meta:positioning/meta.2*/
 data: /*!*/{}/*!*/;
 /*#/#*//*#i117.text.meta:text/meta*/
